--- a/about.html
+++ b/about.html
@@ -35,17 +35,14 @@
         <h4>Unlock Stories With Paradia</h4>
         <p>
           At Paradia, we are your gateway to discovering the beauty, history,
-          and uniqueness of places around the Philippines. Our mission is to
-          provide clear, engaging, and accurate information that sparks
-          curiosity, broadens perspectives, and fosters a deep appreciation for
-          every destination we feature. Whether you’re an avid explorer or
-          someone who loves to learn about the world from the comfort of home,
-          Paradia is here to make every journey of discovery accessible and
-          enjoyable. Through carefully researched content, we bring the charm,
-          culture, and character of each destination to life. From vibrant
-          cityscapes to serene natural landscapes, Paradia takes you beyond the
-          surface to uncover the stories and wonders that make each place
-          special.
+          and uniqueness of Cebu. Our mission is to provide clear, and accurate
+          information that sparks curiosity, broadens perspectives, and fosters
+          a deep appreciation for every destination we feature. Whether you’re
+          an avid explorer or someone who loves to learn about the world from
+          the comfort of home, Paradia is here to make every journey of
+          discovery accessible and enjoyable. Through carefully researched
+          content, we bring the charm, culture, and character of each
+          destination to life. special.
         </p>
         <p>
           Paradia is more than just an informational website, it’s a space for
@@ -58,7 +55,6 @@
         </p>
       </div>
     </div>
-
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
   </body>
