--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
             <span class="tag">HeritageSites</span>
             <span class="tag">Culture</span>
           </div>
-          <button class="read-more">Read More</button>
+          <a href="blog1.html" class="read-more">Read More</a>
         </div>
       </div>
       <div class="blog-card">
@@ -60,21 +60,22 @@
             <span class="tag">ThrillSeeker</span>
             <span class="tag">Travel</span>
           </div>
-          <button class="read-more">Read More</button>
+          <a href="blog2.html" class="read-more">Read More</a>
         </div>
       </div>
       <div class="blog-card">
         <img src="./images/blog3.jpg" alt="Blog Image 3" class="blog-image" />
         <div class="blog-content">
           <h3 class="blog-title">
-            A Local’s Guide to Cebu City: Must-See Spots and Experiences
+            A Local’s Guide to Cebu City: Must-See Spots, Experiences, and
+            Adventures
           </h3>
           <p class="blog-subheading">by Clarisa Prandas</p>
           <div class="blog-tags">
             <span class="tag">CebuCityGuide</span>
             <span class="tag">LocalTravelTips</span>
           </div>
-          <button class="read-more">Read More</button>
+          <a href="blog3.html" class="read-more">Read More</a>
         </div>
       </div>
       <div class="blog-card">
@@ -88,7 +89,7 @@
             <span class="tag">SecretCebu</span>
             <span class="tag">UnderratedDestinations</span>
           </div>
-          <button class="read-more">Read More</button>
+          <a href="blog4.html" class="read-more">Read More</a>
         </div>
       </div>
     </div>
